static/css/style.css
/* >>>>>>>>>>>>>>>>>>>> GENERAL <<<<<<<<<<<<<<<<<<<< */

html, body{
    background: url("../img/office.jpg"); 
	background-size: cover;
	background-repeat: no-repeat;
	background-attachment: fixed;
	display: block;
	width: 100%;
	height: 100%;
	padding: 0px;
	margin: 0px;
	top: 0;
	bottom: 0;
}

.background{
    background-color: rgba(0,0,0,0.8);
    z-index: 0;
    position: relative;
    min-height: 100%;
    height: auto !important;
    height: 100%;
    margin: 0 auto -60px;
}

.post-break{
    margin-top: 20px;
    margin-bottom: 20px;
}

/*::-webkit-scrollbar{
    display: none;
}*/

/* >>>>>>>>>>>>>>>>>>>> TABLES <<<<<<<<<<<<<<<<<<<< */

table, th, td{
    border-collapse: separate;
    vertical-align: text-top;
}

table{
    border-spacing: 30px 0px;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 20px;
}

.dashboard-table{
    margin: auto;
    margin-bottom: 20px;
}

.wrapper1, .wrapper2{ 
    width: 100%; 
    overflow-y: hidden;
}

.wrapper1{ 
    height: 20px;
    margin-bottom: 20px;
    overflow-x: auto;
}

.wrapper2{
    overflow-x: hidden;
}

.top-scroll{ 
    height: 20px; 
}

.bottom-scroll{
    overflow: none;
    margin: auto;
}

th, td{
    border: 2px solid #f2f2f2;
    padding: 5px;
}

th{
    border-top-right-radius: 70%;
    border-top-left-radius: 70%;
    padding-top: 20px;
}

.gradient{
    background: -webkit-linear-gradient(right,#d9d9d9,#b3b3b3);
    background: -moz-linear-gradient(right,#d9d9d9,#b3b3b3);
    background: linear-gradient(right,#d9d9d9,#b3b3b3);
}

.dashboard-table th, td{
    min-width: 310px;
    max-width: 310px;
}

.project-detail{
    min-width: 310px;
    max-width: 510px;
    width: 100%;
}

.invisible{
    z-index: 0;
}

/* >>>>>>>>>>>>>>>>>>>> TEXT <<<<<<<<<<<<<<<<<<<< */

h1,
h2,
h3,
h4{
    align-self: center;
    color: #d9d9d9;
    font-family: 'Do Hyeon', sans-serif;
    position: relative;
    z-index: 1;
}

p{
    color: #d9d9d9;
    font-family: 'Do Hyeon', sans-serif;
    font-size: 18px;
}

.checkout-head{
    color: #000000;
    font-family: 'Do Hyeon', sans-serif;
    margin-bottom: 30px;
}

.checkout{
    color: #000000;
    font-family: 'Do Hyeon', sans-serif;
    font-size: 18px;
    margin-top: 2px;
    margin-bottom: 2px;
}

.invoice{
    color: #000000;
    font-family: 'Signika Negative', sans-serif;
    font-size: 18px;
    margin-top: 2px;
    margin-bottom: 2px;
}

.blog-text{
    color: #262626;
    font-family: 'Bree Serif', serif;
    position: relative;
    z-index: 1;
}

.popup-message{
    color: #d9d9d9;
    font-family: 'Do Hyeon', sans-serif;
    font-size: 20px;
    text-align: center;
    position: relative;
    z-index: 1;
}

.project_sheet{
    color: #000000;
    font-family: 'Do Hyeon', sans-serif;
    font-size: 18px;
    margin-bottom: 0px;
}

.project_sheet_tasks{
    color: #000000;
    font-family: 'Signika Negative', sans-serif;
    font-size: 16px;
    margin-bottom: 0px;
}

.task_status{
    color: #d9d9d9;
    font-family: 'Do Hyeon', sans-serif;
    font-size: 18px;
    margin-bottom: 0px;
}

.edit_tasks{
    color: #000000;
    font-family: 'Signika Negative', sans-serif;
    font-size: 16px;
    margin-top: 2px;
}

.project_status{
    color: #f2f2f2;
    font-family: 'Signika Negative', sans-serif;
    font-size: 24px;
    margin-bottom: 0px;
}

.order-by{
    margin-top: 5px;
    margin-bottom: 0px;
    font-size: 20px;
}

.error{
    color: red;
}

#p_title{
    margin-top: 15px;
}

/* >>>>>>>>>>>>>>>>>>>> NAVBAR <<<<<<<<<<<<<<<<<<<< */

.navbar{
    background-color: #3d5c5c;
    width: 100%;
    height: 70px;
    position: fixed;
    z-index: 1000;
    top: 0;
}

.navbar-collapse{
    background-color: #3d5c5c;
    padding-left: 30px;
    border-bottom-color: #527a7a;
}

.navbar-brand{
    color: #d9d9d9;
    font-family: 'Do Hyeon', sans-serif;
    font-size: 30px;
}

.navbar-brand:hover{
    color: #d9d9d9;
}

.nav-item{
    color: #d9d9d9;
    font-family: 'Do Hyeon', sans-serif;
    font-size: 22px;
    margin-right: 5px;
}

.nav-item:hover{
    color: #f2f2f2;
}

.navbar-toggler-icon{
    color: #ffffff;
}

/* >>>>>>>>>>>>>>>>>>>> HEADER <<<<<<<<<<<<<<<<<<<< */

#header{
    background-color: #293d3d;
    border-bottom: 5px solid #3d5c5c;
    -webkit-filter: opacity(0.9);
    position: relative;
    z-index: 1;
}

.header-desc{
    text-align: center;
    position: relative;
    z-index: 1;
}

/* >>>>>>>>>>>>>>>>>>>> IMAGES <<<<<<<<<<<<<<<<<<<< */

img{
    border-radius: 50%;
    max-height: 150px;
    max-width: 150px;
    position: relative;
    z-index: 1;
}

.img-circle{
    margin: 20px;
    position: relative;
    z-index: 1;
}

.profile{
    display: block;
    margin-left: auto;
    margin-right: auto;
    position: relative;
    z-index: 1;
}

/* >>>>>>>>>>>>>>>>>>>> CONTAINERS <<<<<<<<<<<<<<<<<<<< */

.stretch-container{
    min-height: 100%;
}

.container{
    max-width: 1078px;
}

#blank-container{
    background-color: #f2f2f2;
    padding: 25px;
    margin-top: 50px;
    margin-bottom: 50px;
}

#checkout-container{
    background-color: #f2f2f2;
    padding: 50px;
    margin-bottom: 50px;
}

#bio-container{
    background-color: #293d3d;
    border: 5px solid #3d5c5c;
    border-radius: 5%;
    padding: 15px;
    -webkit-filter: opacity(0.9);
    position: relative;
    z-index: 100;
    margin-bottom: 50px;
}

.popup-container{
    background-color: #293d3d;
    border: 5px solid #3d5c5c;
    border-radius: 5%;
    padding: 15px;
    -webkit-filter: opacity(0.9);
    margin-left: 40px;
    margin-right: 40px;
}

#task-status{
    text-align: center;
}

.project_desc{
    width: 100%;
    margin-top: 0px;
    padding: 2px 5px;
    background-color: #e6e6e6;
}

.task_desc{
    width: 100%;
    margin-top: 5px;
    padding: 2px 5px;
    background-color: #e6e6e6;
}
/* ... */

